Fix High contrast breaking dark theme

--- a/src/features/layout-styles.scss
+++ b/src/features/layout-styles.scss
@@ -1,7 +1,7 @@
 body.layout-classic:not(.is-mobile) {
   --tab-outline-width: var(--border-width);
 
-  &.contrast-light-vivid .mod-root {
+  &.theme-light.contrast-light-vivid .mod-root {
     --tab-outline-width: 0;
   }
 
@@ -331,7 +331,7 @@ body.layout-frame:not(.is-mobile) {
   }
 
   // Editor panel
-  &:not(.tabs-floating, .tabs-underline, .contrast-light-vivid) .mod-root {
+  &:not(.tabs-floating, .tabs-underline, .theme-light.contrast-light-vivid) .mod-root {
     --tab-outline-width: var(--border-width);
 
     .workspace-tab-header-container-inner {
@@ -352,7 +352,7 @@ body.layout-frame:not(.is-mobile) {
 
 body.layout-cupertino:not(.is-mobile) {
   // Editor panel
-  &:not(.tabs-floating, .tabs-underline, .contrast-light-vivid) .mod-root {
+  &:not(.tabs-floating, .tabs-underline, .theme-light.contrast-light-vivid) .mod-root {
     .workspace-tab-header-container-inner {
       --tab-outline-width: var(--border-width);
 
